[package]
name = "state-validation"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Albar <albarjob@gmail.com>"]
description = "Validation for states"
repository = "https://github.com/Ripper53/state-validation"
keywords = ["validate", "validation", "validator"]

[dependencies]
state-validation-derive = { path = "../state-validation-derive", version = "0.1", optional = true }
thiserror = "2.0.17"
variadics_please = "1.1.0"

[features]
default = ["derive"]
derive = ["dep:state-validation-derive"]
input_collector = []
